Fixed profile img size issue on Safari

--- a/src/Containers/About/About.module.scss
+++ b/src/Containers/About/About.module.scss
@@ -24,9 +24,11 @@
     margin: 20px;
     justify-content: center;
     height: auto;
+    width: 30vw;
 
     img { 
         width: 100%;
+        height: 100%;
     }
 }
 
